// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangelogVersions > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <div data-slot="indicator" class="">
    <div data-slot="beam" class="" style="height: 0%;"></div>
  </div>
  <div data-slot="container" class="">
    <!---->
    <!---->
    <article data-slot="root" class="">
      <div data-slot="indicator" class=""><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="">Dec 13, 2024</time>
        <div data-slot="dot" class="">
          <div data-slot="dotInner" class=""></div>
        </div>
      </div>
      <div data-slot="container" class="">
        <div data-slot="header" class="">
          <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
            <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="lg:hidden">Dec 13, 2024</time>
          </div>
          <h2 data-slot="title" class="">
            <!--v-if-->Title 1
          </h2>
          <div data-slot="description" class="">Description 1</div>
          <div data-slot="imageWrapper" class=""><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image">
            <!--v-if-->
          </div>
        </div>
        <div data-slot="footer" class="mt-5">
          <div data-slot="authors" class="">
            <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <p data-slot="name" class="">benjamincanac</p>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>
</section>"
`;

exports[`ChangelogVersions > renders with class correctly 1`] = `
"<div data-slot="root" class="absolute">
  <div data-slot="indicator" class="">
    <div data-slot="beam" class="" style="height: 0%;"></div>
  </div>
  <div data-slot="container" class="">
    <!---->
    <!---->
    <article data-slot="root" class="">
      <div data-slot="indicator" class=""><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="">Dec 13, 2024</time>
        <div data-slot="dot" class="">
          <div data-slot="dotInner" class=""></div>
        </div>
      </div>
      <div data-slot="container" class="">
        <div data-slot="header" class="">
          <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
            <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="lg:hidden">Dec 13, 2024</time>
          </div>
          <h2 data-slot="title" class="">
            <!--v-if-->Title 1
          </h2>
          <div data-slot="description" class="">Description 1</div>
          <div data-slot="imageWrapper" class=""><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image">
            <!--v-if-->
          </div>
        </div>
        <div data-slot="footer" class="mt-5">
          <div data-slot="authors" class="">
            <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <p data-slot="name" class="">benjamincanac</p>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>"
`;

exports[`ChangelogVersions > renders with default slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="indicator" class="">
    <div data-slot="beam" class="" style="height: 0%;"></div>
  </div>
  <div data-slot="container" class="">Default slot</div>
</div>"
`;

exports[`ChangelogVersions > renders with indicator slot correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="indicator" class="">Indicator slot</div>
  <div data-slot="container" class="">
    <!---->
    <!---->
    <article data-slot="root" class="">
      <div data-slot="indicator" class=""><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="">Dec 13, 2024</time>
        <div data-slot="dot" class="">
          <div data-slot="dotInner" class=""></div>
        </div>
      </div>
      <div data-slot="container" class="">
        <div data-slot="header" class="">
          <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
            <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="lg:hidden">Dec 13, 2024</time>
          </div>
          <h2 data-slot="title" class="">
            <!--v-if-->Title 1
          </h2>
          <div data-slot="description" class="">Description 1</div>
          <div data-slot="imageWrapper" class=""><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image">
            <!--v-if-->
          </div>
        </div>
        <div data-slot="footer" class="mt-5">
          <div data-slot="authors" class="">
            <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <p data-slot="name" class="">benjamincanac</p>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>"
`;

exports[`ChangelogVersions > renders with ui correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="indicator" class="bg-primary">
    <div data-slot="beam" class="" style="height: 0%;"></div>
  </div>
  <div data-slot="container" class="">
    <!---->
    <!---->
    <article data-slot="root" class="">
      <div data-slot="indicator" class=""><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="">Dec 13, 2024</time>
        <div data-slot="dot" class="">
          <div data-slot="dotInner" class=""></div>
        </div>
      </div>
      <div data-slot="container" class="">
        <div data-slot="header" class="">
          <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
            <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="lg:hidden">Dec 13, 2024</time>
          </div>
          <h2 data-slot="title" class="">
            <!--v-if-->Title 1
          </h2>
          <div data-slot="description" class="">Description 1</div>
          <div data-slot="imageWrapper" class=""><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image">
            <!--v-if-->
          </div>
        </div>
        <div data-slot="footer" class="mt-5">
          <div data-slot="authors" class="">
            <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <p data-slot="name" class="">benjamincanac</p>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>"
`;

exports[`ChangelogVersions > renders with versions correctly 1`] = `
"<div data-slot="root" class="">
  <div data-slot="indicator" class="">
    <div data-slot="beam" class="" style="height: 0%;"></div>
  </div>
  <div data-slot="container" class="">
    <!---->
    <!---->
    <article data-slot="root" class="">
      <div data-slot="indicator" class=""><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="">Dec 13, 2024</time>
        <div data-slot="dot" class="">
          <div data-slot="dotInner" class=""></div>
        </div>
      </div>
      <div data-slot="container" class="">
        <div data-slot="header" class="">
          <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
            <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="lg:hidden">Dec 13, 2024</time>
          </div>
          <h2 data-slot="title" class="">
            <!--v-if-->Title 1
          </h2>
          <div data-slot="description" class="">Description 1</div>
          <div data-slot="imageWrapper" class=""><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image">
            <!--v-if-->
          </div>
        </div>
        <div data-slot="footer" class="mt-5">
          <div data-slot="authors" class="">
            <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <p data-slot="name" class="">benjamincanac</p>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>"
`;

exports[`ChangelogVersions > renders without indicator correctly 1`] = `
"<div data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!---->
    <!---->
    <article data-slot="root" class="">
      <!--v-if-->
      <div data-slot="container" class="">
        <div data-slot="header" class="">
          <div data-slot="meta" class=""><span data-slot="badge" class=""><!--v-if--><span data-slot="label" class="">Badge</span>
            <!--v-if--></span><time datetime="2024-12-13T09:32:32.598Z" data-slot="date" class="">Dec 13, 2024</time>
          </div>
          <h2 data-slot="title" class="">
            <!--v-if-->Title 1
          </h2>
          <div data-slot="description" class="">Description 1</div>
          <div data-slot="imageWrapper" class=""><img alt="Image alt" src="https://picsum.photos/640/360" data-slot="image">
            <!--v-if-->
          </div>
        </div>
        <div data-slot="footer" class="mt-5">
          <div data-slot="authors" class="">
            <div data-orientation="horizontal" data-slot="root" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" alt="benjamincanac" data-slot="image"></span>
              <div data-slot="wrapper" class="">
                <!--v-if-->
                <p data-slot="name" class="">benjamincanac</p>
                <!--v-if-->
              </div>
            </div>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>"
`;
